# PasswordManager

./: LICENSE  README.md  passwords.json  pubspec.yaml  pyproject.toml  run_packed.sh
.github/workflows/: builds.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable-v21/: launch_background.xml
android/app/src/main/res/values/: colors.xml  styles.xml
android/app/src/main/res/values-night/: styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
lib/: main.dart
lib/constants/: app_constants.dart
lib/models/: password_entry.dart
lib/services/: storage_service.dart
password_manager/: .encryption_key  color_themes.json  passwords.json  settings.json
src/: constants.py  languages.py  main.py  models.py  storage.py  themes.py
src/assets/: .$icon.drawio.bkp
src/password_manager/: .encryption_key  color_themes.json  passwords.json  settings.json
