[project]
name = "passwordmanager"
version = "0.7.0"
description = "密码管理器"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Anthony", email = "610621088@qq.com" }
]
dependencies = [
    "flet>=0.70.0.dev5755",
    "cryptography>=40.0.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.70.0",
    "flet-desktop>=0.70.0",
    "flet-web>=0.70.0",
]

[tool.flet]
org = "com.passwordmanager"
product = "密码管理器"
copyright = "Copyright (C) 2026"
android_min_sdk = 24
target_arch = ["arm64-v8a", "armeabi-v7a"]

[tool.flet.app]
path = "src"